--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -16,6 +16,9 @@
         // left: 500px;
         // display: flex;
         // max-height: 100vh;
+        max-width: 600px;
+        // margin: 0 38px 38px 38px;
+
         flex-direction: column;
         align-items: center;
         // margin: 0px 10px 0px 10px;
@@ -35,7 +38,11 @@
 
         .status {
             margin-top: 10px;
-            width: 95%;
+            width: 96%;
+            // display: flex;
+            // flex-wrap: wrap;
+            // justify-content: space-around;
+            // max-width: 565px;
             // max-width: 580px;
             // width: 100%;
             // margin-left: 40px;
@@ -51,32 +58,38 @@
             display: none;
         }
     }
-    .right-side {
-        right: 20%;
-        width: 22%;
+    .upper_level {
+        right: 22%;
+        width: 100%;
         position: fixed;
-        // height: 100vh;
-        // overflow: scroll;
-        // margin: 0px 40px 0px 10px;
-        // position: fixed;
-        // right: -40px;
-        // position: fixed;
-        // right: 0px;
-        // position: relative;
-        // padding: 40px 80px 30px;
-        &::-webkit-scrollbar {
-            display: none;
-        }
-        // .text {
-        //     p {
-        //         margin: 40px 0px 10px 20px;
-        //         color: #010010;
-        //         font-weight: 500;
-        //         opacity: 0.5;
-        //     }
-        // }
-        .sponsoreds_main {
-            margin-top: 30px;
+        .right-side {
+            width: 100%;
+            position: sticky;
+            // max-width: 380px;
+            // margin: 0 38px 38px 38px;
+            // height: 100vh;
+            // overflow: scroll;
+            // margin: 0px 40px 0px 10px;
+            // position: fixed;
+            // right: -40px;
+            // position: fixed;
+            // right: 0px;
+            // position: relative;
+            // padding: 40px 80px 30px;
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            // .text {
+            //     p {
+            //         margin: 40px 0px 10px 20px;
+            //         color: #010010;
+            //         font-weight: 500;
+            //         opacity: 0.5;
+            //     }
+            // }
+            .sponsoreds_main {
+                margin-top: 30px;
+            }
         }
     }
     .button_float {
@@ -126,10 +139,10 @@
         .left-side {
             width: 63% !important;
         }
-        .right-side {
-            right: 12% !important;
-            width: 25% !important;
-        }
+        // .right-side {
+        //     right: 12% !important;
+        //     width: 25% !important;
+        // }
         .button_float {
             right: 37%;
             .circle {
@@ -154,10 +167,10 @@
             width: 60% !important;
             // margin-left: 16px;
         }
-        .right-side {
-            right: 8% !important;
-            width: 28% !important;
-        }
+        // .right-side {
+        //     right: 8% !important;
+        //     width: 28% !important;
+        // }
         .option_float {
             right: 48%;
         }
