--- a/component/nestedComponent/home/storySlider/stories/index.scss
+++ b/component/nestedComponent/home/storySlider/stories/index.scss
@@ -1,7 +1,7 @@
 .stories_main {
     display: flex;
     // width: 100%;
-    justify-content: space-around;
+    justify-content: center;
     // max-width: 580px;
 
     .arrow {
