working on interest

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -44,3 +44,4 @@
 @import "../home/commonCreatePost/addingModal";
 @import "../home/commonCreatePost/addTag";
 @import "../home/commonCreatePost/addAudience";
+@import "../interestScreen";
