--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -104,3 +104,12 @@
         margin-top: 30px;
     }
 }
+.interest {
+    .btn {
+        width: 150px;
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        border-radius: 5px;
+        border: none;
+        height: 64px;
+    }
+}
