working on identify flow

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -45,3 +45,4 @@
 @import "../home/commonCreatePost/addTag";
 @import "../home/commonCreatePost/addAudience";
 @import "../interestScreen";
+@import "../userProfile/";
