--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -19,3 +19,4 @@
 @import "../../component/passwordResetComponents/commonCode/";
 @import "../../component/passwordResetComponents/otp";
 @import "../../component/interestScreen/";
+@import "../../component/userProfile/";
