--- a/component/nestedComponent/userProfile/language/index.scss
+++ b/component/nestedComponent/userProfile/language/index.scss
@@ -3,7 +3,7 @@
         font-weight: 600;
     }
     .selectData {
-        padding: 20px 0 20px 0;
+        margin: 45px 0 45px 0;
     }
     .ant-select:not(.ant-select-customize-input) .ant-select-selector {
         background-color: #f8f8f8;
