--- a/component/re-usabelComponent/common/pattern/index.scss
+++ b/component/re-usabelComponent/common/pattern/index.scss
@@ -6,17 +6,43 @@
         background-size: cover;
         min-height: 100vh;
     }
-    .content {
+    .main {
         width: 60%;
         margin: auto;
-        .form {
-            max-width: 600px;
-            margin: auto;
-            .image {
-                margin-bottom: 50px;
+        .topBar {
+            display: none;
+            width: 100%;
+            height: 30px;
+            background-image: url(../../../../public/images/login.png);
+            background-size: cover;
+            margin-bottom: 20px;
+        }
+        .content {
+            padding: 0 12px;
+            .form {
+                max-width: 600px;
+                margin: auto;
+                .image {
+                    margin-bottom: 50px;
+                }
+                // img {
+                //     margin-bottom: 50px;
+                // }
             }
-            // img {
-            //     margin-bottom: 50px;
+        }
+    }
+}
+@media screen and (max-width: 576px) {
+    .Pattern_main {
+        .image_side {
+            display: none;
+        }
+        .main {
+            width: 100%;
+            .topBar {
+                display: block;
+            }
+            // .content {
             // }
         }
     }
